--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
       <br>
       <a> NEWS (soon) </a>
       <br>
+
+      <div class="Center_img">
+        <a href="https://discord.gg/V8MS2Wtz">
+          <img src="images/discord_logo.png" width= "200" height="200">
+        </a>s
+      </div>
+
       <p id="message1"> Website owned by the Dabirist Party </p>
       <p id="message2"> Website on phone not supported</p>
     </div>
+
 
   </body>
 
